# Taller_de_Programacion_Entrega_Final

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Vagrantfile  configuracion.yaml  configuracionCheats.yaml
src/: CMakeLists.txt
src/client_src/: camara.cpp  camara.h  cliente.cpp  cliente.h  direcciones.h  enviadorCliente.cpp  enviadorCliente.h  interfaz.cpp  interfaz.h  lobby.cpp  lobby.h  lobbyProtocolo.cpp  lobbyProtocolo.h  main.cpp  mapa.cpp  mapa.h  protocolo_cliente.cpp  protocolo_cliente.h  recibidorLobby.cpp  recibidorLobby.h  recibidor_cliente.cpp  recibidor_cliente.h  renderizado.cpp  renderizado.h
src/client_src/Animaciones/: animacion.cpp  animacion.h
src/client_src/Animaciones/Animaciones_Enemigos/: animacion_Bruja_caminando.cpp  animacion_Bruja_caminando.h  animacion_Enemigo_desaparecer.cpp  animacion_Enemigo_desaparecer.h  animacion_Fencer_caminando.cpp  animacion_Fencer_caminando.h  animacion_Lizzard_caminando.cpp  animacion_Lizzard_caminando.h  animacion_Rat_caminando.cpp  animacion_Rat_caminando.h
src/client_src/Animaciones/Animaciones_Jazz/: animacion_Jazz_caminando.cpp  animacion_Jazz_caminando.h  animacion_Jazz_cayendo.cpp  animacion_Jazz_cayendo.h  animacion_Jazz_cayendo_horizontal.cpp  animacion_Jazz_cayendo_horizontal.h  animacion_Jazz_corriendo.cpp  animacion_Jazz_corriendo.h  animacion_Jazz_deja_disparo_quieto.cpp  animacion_Jazz_deja_disparo_quieto.h  animacion_Jazz_disparo_quieto.cpp  animacion_Jazz_disparo_quieto.h  animacion_Jazz_disparo_saltando.cpp  animacion_Jazz_disparo_saltando.h  animacion_Jazz_habilidad.cpp  animacion_Jazz_habilidad.h  animacion_Jazz_herido.cpp  animacion_Jazz_herido.h  animacion_Jazz_intoxicado_caminando.cpp  animacion_Jazz_intoxicado_caminando.h  animacion_Jazz_intoxicado_quieto.cpp  animacion_Jazz_intoxicado_quieto.h  animacion_Jazz_muerte.cpp  animacion_Jazz_muerte.h  animacion_Jazz_quieto.cpp  animacion_Jazz_quieto.h  animacion_Jazz_saltando.cpp  animacion_Jazz_saltando.h  animacion_Jazz_saltando_horizontal.cpp  animacion_Jazz_saltando_horizontal.h  animacion_Jazz_tambalear.cpp  animacion_Jazz_tambalear.h
src/client_src/Animaciones/Animaciones_Lori/: animacion_Lori_caminando.cpp  animacion_Lori_caminando.h  animacion_Lori_cayendo.cpp  animacion_Lori_cayendo.h  animacion_Lori_cayendo_horizontal.cpp  animacion_Lori_cayendo_horizontal.h  animacion_Lori_corriendo.cpp  animacion_Lori_corriendo.h  animacion_Lori_deja_disparo_quieto.cpp  (+23 more)
src/client_src/Vista_Enemigos/: enemigoBrujaView.cpp  enemigoBrujaView.h  enemigoFencerView.cpp  enemigoFencerView.h  enemigoLizzardView.cpp  enemigoLizzardView.h  enemigoRatView.cpp  enemigoRatView.h  enemigoView.cpp  enemigoView.h  enemigoViewFactory.cpp  enemigoViewFactory.h
src/client_src/Vista_Objetos/: objetoGemaView.cpp  objetoGemaView.h  objetoMonedaView.cpp  objetoMonedaView.h  objetoMunicionTipo_1View.cpp  objetoMunicionTipo_1View.h  objetoMunicionTipo_2View.cpp  objetoMunicionTipo_2View.h  objetoMunicionTipo_3View.cpp  objetoMunicionTipo_3View.cpp.cpp  objetoMunicionTipo_3View.h  objetoView.cpp  objetoView.h  objetoViewFactory.cpp  objetoViewFactory.h  objetoZanahoriaView.cpp  objetoZanahoriaView.h
src/client_src/Vista_Personajes/: personajeJazzView.cpp  personajeJazzView.h  personajeJazzViewFactory.cpp  personajeJazzViewFactory.h  personajeLoriView.cpp  personajeLoriView.h  personajeLoriViewFactory.cpp  personajeLoriViewFactory.h  personajeSpazView.cpp  personajeSpazView.h  personajeSpazViewFactory.cpp  personajeSpazViewFactory.h  personajeView.cpp  personajeView.h  personajeViewFactory.cpp  personajeViewFactory.h
src/client_src/Vista_Proyectiles/: balaView.cpp  balaView.h  balasPersonajes.cpp  balasPersonajes.h  proyectilViewFactory.cpp  proyectilViewFactory.h
src/common_src/: accion.h  bala.cpp  bala.h  codigo_enemigo.h  codigo_estado.h  codigo_objeto.h  evento.h  queue.h  resolver.cpp  socket.cpp  socket.h  thread.h  wrap_socket.cpp
src/editor_src/: level_render.cpp  level_render.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/mapas/: beach_prueba.yaml  carrotus_prueba.yaml  haunted_prueba.yaml  mapa.yaml  mapa_beach.yaml  mapa_castle.yaml  mapa_demo.yaml  mapa_prueba.yaml  prueba.yaml
src/server_src/: aceptador.cpp  aceptador.h  arma.cpp  arma.h  configuracion.cpp  configuracion.h  controlador_balas.h  enviadorJugador.cpp  enviadorJugador.h  gridCell.h  jugador.cpp  jugador.h  logicaPartida.cpp  logicaPartida.h  main.cpp  mapa.h  monitorPartidas.cpp  monitorPartidas.h  partida.cpp  partida.h  protocoloServidor.cpp  protocoloServidor.h  recibidorJugador.cpp  recibidorJugador.h  rectangulo.h  servidor.cpp  servidor.h  triangulo.h
src/server_src/bala/: bala.cpp  bala.h  controlador_balas.h
src/server_src/enemigo/: enemigo.cpp  enemigo.h  enemigo_bruja.cpp  enemigo_bruja.h  enemigo_fencer.cpp  enemigo_fencer.h  enemigo_lizzard.cpp  enemigo_lizzard.h  enemigo_rat.cpp  enemigo_rat.h  fabrica_enemigos.h
src/server_src/estado/: estado.cpp  estado.h  estado_caminando.cpp  estado_caminando.h  estado_cayendo.cpp  estado_cayendo.h  estado_corriendo.cpp  estado_corriendo.h  estado_especial.cpp  estado_especial.h  estado_herido.cpp  estado_herido.h  estado_muerto.cpp  estado_muerto.h  estado_quieto.cpp  estado_quieto.h  estado_saltando.cpp  estado_saltando.h  estado_tambalear.cpp  estado_tambalear.h
src/server_src/objeto/: fabrica_objetos.h  objeto.cpp  objeto.h  objeto_gema.cpp  objeto_gema.h  objeto_moneda.cpp  objeto_moneda.h  objeto_municion.cpp  objeto_municion.h  objeto_solido.cpp  objeto_solido.h  objeto_zanahoria.cpp  objeto_zanahoria.h
src/server_src/personaje/: personaje.cpp  personaje.h  personaje_jazz.cpp  personaje_jazz.h  personaje_lori.cpp  personaje_lori.h  personaje_spaz.cpp  personaje_spaz.h
src/ventana_lobby/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
tests/: CMakeLists.txt  run.sh  test_bala.cpp  test_bruja.cpp  test_controlador_balas.cpp  test_fencer.cpp  test_jazz.cpp  test_lizzard.cpp  test_logica_partida.cpp  test_lori.cpp  test_rat.cpp  test_rectangulo.cpp  test_spaz.cpp
(+57 files in other folders)
